fixed overflow and arrow issues on mobile/tablet. also fixed about hero-text styling

--- a/css/index.css
+++ b/css/index.css
@@ -156,15 +156,16 @@ nav a {
   width: 100%;
   height: 70vh;
   overflow-x: hidden;
+  overflow-y: hidden;
 }
 .carousel {
   margin-top: 7em;
   position: relative;
 }
 .carousel #hero-text {
-  background-color: rgba(0, 0, 0, 0.5);
+  background-color: rgba(0, 0, 0, 0.6);
   color: #fff;
-  margin-top: 13em;
+  margin-top: 10em;
   text-align: center;
   font-size: 2.3em;
   position: relative;
@@ -219,7 +220,7 @@ nav a {
 .arrow {
   cursor: pointer;
   position: absolute;
-  top: 64%;
+  top: 60%;
   margin-top: -35px;
   width: 60px;
   height: 60px;
@@ -254,13 +255,13 @@ nav a {
     margin-top: 0.2em;
   }
   .carousel #carouselArrow {
-    margin-bottom: -15em;
+    margin-bottom: -19em;
     width: 30px;
   }
   .carousel .arrow {
     cursor: pointer;
     position: absolute;
-    top: 80%;
+    top: 77%;
     margin-top: -35px;
     width: 60px;
     height: 60px;
@@ -268,7 +269,7 @@ nav a {
 }
 @media (max-width: 500px) {
   .carousel #hero-text {
-    margin-top: -7.5em;
+    margin-top: -6em;
     padding: 0.3em 0 0.3em 0;
   }
   .carousel #hero-text h1 {
@@ -282,7 +283,15 @@ nav a {
     margin-top: 0.2em;
   }
   .carousel #carouselArrow {
-    margin-bottom: -45em;
+    margin-bottom: -41em;
+  }
+  .carousel .arrow {
+    cursor: pointer;
+    position: absolute;
+    top: 60%;
+    margin-top: -35px;
+    width: 60px;
+    height: 60px;
   }
 }
 .mainSection {
@@ -347,13 +356,29 @@ footer .footer-container .socialIcons {
   background-size: cover;
 }
 .hero #hero-text {
-  background-color: rgba(255, 255, 255, 0.4);
   color: black;
   text-align: center;
   font-size: 2em;
   display: block;
   padding: 1em 5em 1em 5em;
-  transform: translate(0%, 60%);
+}
+.hero #hero-text #hero-text-inner {
+  background-color: rgba(255, 255, 255, 0.5);
+  margin-top: 11em;
+  padding: 1em;
+}
+@media (max-width: 800px) {
+  .hero #hero-text #hero-text-inner {
+    margin-top: 5em;
+  }
+}
+@media (max-width: 500px) {
+  .hero #hero-text #hero-text-inner {
+    margin-top: 4em;
+  }
+  .hero #hero-text #hero-text-inner h1 {
+    font-size: 0.9em;
+  }
 }
 .main-section {
   padding: 3em 3em 3em 3em;
@@ -461,6 +486,7 @@ body {
   font-size: 62.5%;
   font-family: 'Ubuntu';
   background-color: #fffef7;
+  scroll-behavior: smooth;
 }
 .container {
   position: relative;
